--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://chris-kherk.github.io/MedUltima-Aesthetics-14/">https://chris-kherk.github.io/MedUltima-Aesthetics-14/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/MedUltima+Aesthetics-(4-30)/MedUltima-14/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/MedUltima+Aesthetics-(4-30)/MedUltima-14/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/MedUltima/MedUltima-14/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/MedUltima/MedUltima-14/index.html</a><br>
+                <a target="_bLank" href="https://superb-mermaid-6a1859.netlify.app">https://superb-mermaid-6a1859.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
